select: Correct select's vertical-align for IE10

--- a/design/common.blocks/select/_theme/select_theme_normal.styl
+++ b/design/common.blocks/select/_theme/select_theme_normal.styl
@@ -2,7 +2,7 @@
 {
     max-width: 100%;
 
-    vertical-align: top;
+    vertical-align: bottom;
 
     .select__button
     {
